Fixed nuspec path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       uses: vvvv/PublishVLNuget@1.0.26-alpha
       with:
         csproj: src\VL.FMODStudio\VL.FMODStudio.csproj
-        nuspec: deployment\GithubPackageTest.nuspec
+        nuspec: deployment\VL.FMODStudio.nuspec
         icon-src: https://raw.githubusercontent.com/vvvv/PublicContent/master/nugeticon.png
         icon-dst: ./nugeticon.png
         nuget-key: ${{ secrets.NUGET_KEY }}
