--- a/deployment/VL.FMODStudio.nuspec
+++ b/deployment/VL.FMODStudio.nuspec
@@ -17,6 +17,9 @@
     <releaseNotes>Nuget Release</releaseNotes>
     <language>en-US</language>
     <tags>VL adaptive audio engine fmod</tags>
+    <dependencies>
+      <dependency id="VL.Core" version="0.95.37-g8f06687fc6" />
+    </dependencies>
   </metadata>
   <files>
     <file src="..\*.vl" target="" exclude="" />
