Removed weird type in nuspec

--- a/deployment/VL.FMODStudio.nuspec
+++ b/deployment/VL.FMODStudio.nuspec
@@ -24,7 +24,7 @@
   <files>
     <file src="..\*.vl" target="" exclude="" />
     <file src="..\**\*.vl" target="" exclude="" />
-    <file src="..\src\VL.FMODStudio\bin\Release\VL.FMODStudio.dll" target="lib" exclu`="" />
+    <file src="..\src\VL.FMODStudio\bin\Release\VL.FMODStudio.dll" target="lib" exclude="" />
     <file src="..\lib\fmod.dll" target="lib" exclude="" />
     <file src="..\lib\fmodstudio.dll" target="lib" exclude="" />
     <file src="..\lib\fsbank.dll" target="lib" exclude="" />
