--- a/src/VL.FMODStudio/VL.FMODStudio.csproj
+++ b/src/VL.FMODStudio/VL.FMODStudio.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="VL.Core">
-      <Version>0.95.37-g8f06687fc6</Version>
+      <Version>2020.2.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
